--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
   border-bottom: 1px solid #f2f2f2;
 }
 
+.navbar h1 {
+  color: #5cd65c;
+}
+
 .navbar .links {
   margin-left: auto;
 }
@@ -23,4 +27,8 @@
   margin-left: 16px;
   text-decoration: none;
   padding: 6px;
+}
+
+.navbar a:hover {
+  color: #5cd65c;
 }
