Add hover effect for .blog-preview

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@
   border-bottom: 1px solid #fafafa;
 }
 
+.blog-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+
 .blog-preview h2 {
   font-size: 20px;
   color: #1f7de9;
